# hyprscratch

./: .gitignore  Cargo.toml  LICENSE  NIX.md  README.md  default.nix  flake.nix  test_config.txt  test_config2.txt
nix/: default.nix  hm.nix
src/: config.rs  daemon.rs  dispatchers.rs  event.rs  extra.rs  logs.rs  main.rs  scratchpad.rs  utils.rs
test_configs/: test_config1.txt  test_config2.txt  test_config3.txt  test_hyprlang.conf  test_lua.lua  test_toml.toml
test_configs/test_nested/: config1.txt  config2.txt  config3.txt  config4.txt  config5.txt  config_main.txt
test_configs/test_nested/more_configs/: config7.txt  config8.txt
