[package]
name = "hyprscratch"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Improved scratchpad functionality for Hyprland"
homepage = "https://github.com/sashetophizika/hyprscratch"
repository = "https://github.com/sashetophizika/hyprscratch"
readme = "README.md"
keywords = ["hyprland", "scratchpad"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
hyprland = "0.4.0-beta.2"
toml = "0.8.19"
