[package]
name = "hyprscratch"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "Improved scratchpad functionality for Hyprland"
homepage = "https://github.com/sashetophizika/hyprscratch"
documentation = "https://docs.rs/crate/hyprscratch"
repository = "https://github.com/sashetophizika/hyprscratch"
readme = "README.md"
keywords = ["linux", "wayland", "hyprland", "scratchpad"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
hyprland = "0.4.0-beta.3"
notify = "8.1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.clippy]
unit_arg = "allow"
